# dsl-spa

./: LICENSE  README.md  pyproject.toml
api/: Running API.md
api/basic/: Dockerfile  data_objects.py  main.py  requirements.txt  settings.py
api/superwise/: Dockerfile  api_functions.py  data_objects.py  main.py  requirements.txt  settings.py
data/: activities.csv  project_updates.csv  stadium_projects.csv
docs/: Creating_a_Pipeline_Schema.md  Pipelines.md
examples/: command_pipeline_example.ipynb  data_pipeline_example.ipynb
src/dsl_spa/pipeline/: connector.py  pipeline.py  pipeline_functions.py  semantic_cache_pipeline.py
src/dsl_spa/utils/: schema.py
