[project]
name = "dsl-spa"
version = "0.1.15"
authors = [
  { name="superwise-brian", email="brian.mcclannahan@superwise.ai" },
]
description = "A tool for building Structured Agentic Pipelines"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/superwise-ai/dsl-spa"
Issues = "https://github.com/superwise-ai/dsl-spa/issues"

[build-system]
requires = ["setuptools >= 77.0.3","pandas >= 2.0.0","altair >= 5.3.0","SQLAlchemy >= 2.0.0"]
build-backend = "setuptools.build_meta"